@@ -16,11 +16,18 @@
 
 package com.google.common.base;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_CLASS_PATH;
+import static com.google.common.base.StandardSystemProperty.JAVA_SPECIFICATION_VERSION;
+import static com.google.common.base.StandardSystemProperty.PATH_SEPARATOR;
+
+import com.google.common.collect.ImmutableList;
 import com.google.common.testing.GcFinalization;
 import java.io.Closeable;
+import java.io.File;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.security.Permission;
@@ -39,6 +46,8 @@ import junit.framework.TestCase;
  *
  * @author Eamonn McManus
  */
+
+
 public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase {
 
   /*
@@ -64,8 +73,7 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     }
 
     @Override
-    public void finalizeReferent() {
-    }
+    public void finalizeReferent() {}
   }
 
   private static class PermissivePolicy extends Policy {
@@ -76,9 +84,8 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
   }
 
   private WeakReference<ClassLoader> useFrqInSeparateLoader() throws Exception {
-    final URLClassLoader myLoader = (URLClassLoader) getClass().getClassLoader();
-    final URL[] urls = myLoader.getURLs();
-    URLClassLoader sepLoader = new URLClassLoader(urls, myLoader.getParent());
+    final ClassLoader myLoader = getClass().getClassLoader();
+    URLClassLoader sepLoader = new URLClassLoader(getClassPathUrls(), myLoader.getParent());
     // sepLoader is the loader that we will use to load the parallel FinalizableReferenceQueue (FRQ)
     // and friends, and that we will eventually expect to see garbage-collected. The assumption
     // is that the ClassLoader of this test is a URLClassLoader, and that it loads FRQ itself
@@ -104,7 +111,8 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
 
     // Now make a parallel FRQ and an associated FinalizableWeakReference to an object, in order to
     // exercise some classes from the parallel ClassLoader.
-    AtomicReference<Object> sepFrqA = new AtomicReference<Object>(sepFrqC.newInstance());
+    AtomicReference<Object> sepFrqA =
+        new AtomicReference<Object>(sepFrqC.getDeclaredConstructor().newInstance());
     Class<?> sepFwrC = sepLoader.loadClass(MyFinalizableWeakReference.class.getName());
     Constructor<?> sepFwrCons = sepFwrC.getConstructor(Object.class, sepFrqC);
     // The object that we will wrap in FinalizableWeakReference is a Stopwatch.
@@ -112,8 +120,9 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     assertSame(sepLoader, sepStopwatchC.getClassLoader());
     AtomicReference<Object> sepStopwatchA =
         new AtomicReference<Object>(sepStopwatchC.getMethod("createUnstarted").invoke(null));
-    AtomicReference<WeakReference<?>> sepStopwatchRef = new AtomicReference<WeakReference<?>>(
-        (WeakReference<?>) sepFwrCons.newInstance(sepStopwatchA.get(), sepFrqA.get()));
+    AtomicReference<WeakReference<?>> sepStopwatchRef =
+        new AtomicReference<WeakReference<?>>(
+            (WeakReference<?>) sepFwrCons.newInstance(sepStopwatchA.get(), sepFrqA.get()));
     assertNotNull(sepStopwatchA.get());
     // Clear all references to the Stopwatch and wait for it to be gc'd.
     sepStopwatchA.set(null);
@@ -128,9 +137,14 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     GcFinalization.awaitClear(loaderRef);
   }
 
+  /**
+   * Tests that the use of a {@link FinalizableReferenceQueue} does not subsequently prevent the
+   * loader of that class from being garbage-collected.
+   */
   public void testUnloadableWithoutSecurityManager() throws Exception {
-    // Test that the use of a FinalizableReferenceQueue does not subsequently prevent the
-    // loader of that class from being garbage-collected.
+    if (isJdk9OrHigher()) {
+      return;
+    }
     SecurityManager oldSecurityManager = System.getSecurityManager();
     try {
       System.setSecurityManager(null);
@@ -140,12 +154,18 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     }
   }
 
+  /**
+   * Tests that the use of a {@link FinalizableReferenceQueue} does not subsequently prevent the
+   * loader of that class from being garbage-collected even if there is a {@link SecurityManager}.
+   * The {@link SecurityManager} environment makes such leaks more likely because when you create a
+   * {@link URLClassLoader} with a {@link SecurityManager}, the creating code's {@link
+   * java.security.AccessControlContext} is captured, and that references the creating code's {@link
+   * ClassLoader}.
+   */
   public void testUnloadableWithSecurityManager() throws Exception {
-    // Test that the use of a FinalizableReferenceQueue does not subsequently prevent the
-    // loader of that class from being garbage-collected even if there is a SecurityManager.
-    // The SecurityManager environment makes such leaks more likely because when you create
-    // a URLClassLoader with a SecurityManager, the creating code's AccessControlContext is
-    // captured, and that references the creating code's ClassLoader.
+    if (isJdk9OrHigher()) {
+      return;
+    }
     Policy oldPolicy = Policy.getPolicy();
     SecurityManager oldSecurityManager = System.getSecurityManager();
     try {
@@ -164,17 +184,21 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
 
     @Override
     public WeakReference<Object> call() {
-      WeakReference<Object> wr = new FinalizableWeakReference<Object>(new Integer(23), frq) {
-        @Override
-        public void finalizeReferent() {
-          finalized.release();
-        }
-      };
+      WeakReference<Object> wr =
+          new FinalizableWeakReference<Object>(new Integer(23), frq) {
+            @Override
+            public void finalizeReferent() {
+              finalized.release();
+            }
+          };
       return wr;
     }
   }
 
   public void testUnloadableInStaticFieldIfClosed() throws Exception {
+    if (isJdk9OrHigher()) {
+      return;
+    }
     Policy oldPolicy = Policy.getPolicy();
     SecurityManager oldSecurityManager = System.getSecurityManager();
     try {
@@ -200,9 +224,8 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
   // gc'd even if there is a still a FinalizableReferenceQueue in a static field. (Setting the field
   // to null would also work, but only if there are no references to the FRQ anywhere else.)
   private WeakReference<ClassLoader> doTestUnloadableInStaticFieldIfClosed() throws Exception {
-    final URLClassLoader myLoader = (URLClassLoader) getClass().getClassLoader();
-    final URL[] urls = myLoader.getURLs();
-    URLClassLoader sepLoader = new URLClassLoader(urls, myLoader.getParent());
+    final ClassLoader myLoader = getClass().getClassLoader();
+    URLClassLoader sepLoader = new URLClassLoader(getClassPathUrls(), myLoader.getParent());
 
     Class<?> frqC = FinalizableReferenceQueue.class;
     Class<?> sepFrqC = sepLoader.loadClass(frqC.getName());
@@ -219,7 +242,7 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     assertNotSame(frqUserC, sepFrqUserC);
     assertSame(sepLoader, sepFrqUserC.getClassLoader());
 
-    Callable<?> sepFrqUser = (Callable<?>) sepFrqUserC.newInstance();
+    Callable<?> sepFrqUser = (Callable<?>) sepFrqUserC.getDeclaredConstructor().newInstance();
     WeakReference<?> finalizableWeakReference = (WeakReference<?>) sepFrqUser.call();
 
     GcFinalization.awaitClear(finalizableWeakReference);
@@ -234,5 +257,45 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     frq.close();
 
     return new WeakReference<ClassLoader>(sepLoader);
+  }
+
+  private URL[] getClassPathUrls() {
+    ClassLoader classLoader = getClass().getClassLoader();
+    return classLoader instanceof URLClassLoader
+        ? ((URLClassLoader) classLoader).getURLs()
+        : parseJavaClassPath().toArray(new URL[0]);
+  }
+
+  /**
+   * Returns the URLs in the class path specified by the {@code java.class.path} {@linkplain
+   * System#getProperty system property}.
+   */
+  // TODO(b/65488446): Make this a public API.
+  private static ImmutableList<URL> parseJavaClassPath() {
+    ImmutableList.Builder<URL> urls = ImmutableList.builder();
+    for (String entry : Splitter.on(PATH_SEPARATOR.value()).split(JAVA_CLASS_PATH.value())) {
+      try {
+        try {
+          urls.add(new File(entry).toURI().toURL());
+        } catch (SecurityException e) { // File.toURI checks to see if the file is a directory
+          urls.add(new URL("file", null, new File(entry).getAbsolutePath()));
+        }
+      } catch (MalformedURLException e) {
+        AssertionError error = new AssertionError("malformed class path entry: " + entry);
+        error.initCause(e);
+        throw error;
+      }
+    }
+    return urls.build();
+  }
+
+  /**
+   * These tests fail in JDK 9 and JDK 10 for an unknown reason. It might be the test; it might be
+   * the underlying functionality. Fixing this is not a high priority; if you need it to be fixed,
+   * please comment on <a href="https://github.com/google/guava/issues/3086">issue 3086</a>.
+   */
+  private static boolean isJdk9OrHigher() {
+    return JAVA_SPECIFICATION_VERSION.value().startsWith("9")
+        || JAVA_SPECIFICATION_VERSION.value().startsWith("10");
   }
 }
